# pacebook-backend

./: README.md  pyproject.toml  requirements.txt
common/: models.py
community/: admin.py  models.py  serializers.py  urls.py  views.py
community/migrations/: 0001_initial.py  0002_initial.py
community/tests/: factories.py  test_comment.py  test_comments.py  test_likes.py  test_my_page.py  test_post.py  test_posts.py
config/: settings.py  urls.py
records/: admin.py  models.py  serializers.py  urls.py  views.py
records/migrations/: 0001_initial.py  0002_alter_record_route.py  0002_initial.py  0003_alter_record_route.py  0003_rename_distance_record_distance_m_and_more.py  0004_alter_record_route.py
records/tests/: factories.py  test_my_records.py  test_records.py
runningmates/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
runningmates/migrations/: 0001_initial.py  0002_runningmate_pace_alter_runningmate_scheduled_time.py  0003_runparticipant.py  0004_rungroup_alter_runparticipant_group_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_avatar_remove_user_description_and_more.py  0003_user_avatar.py
users/tests/: factories.py  test_user_me.py
